--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                   <li class="menu__item"> <a class="menu__link" href="#popup">HOME</a> </li>
                   <li class="menu__item"> <a class="menu__link" href="#works">Work</a> </li>
                   <li class="menu__item"> <a class="menu__link" href="#about">About</a> </li>
+
                </ul>
             </nav>
          </div>
@@ -140,13 +141,17 @@
             </div>
          </section>
       </main>
+
       <footer class="footer">
          <div class="footer__container">
             <div class="footer__text"> Made with<p> by <span>Srinivas Dezign</span></p>
             </div>
          </div>
       </footer>
+      <div class="back">
 
+         <img src="img/header-block/Vector.svg" alt="">
+      </div>
       <div class="popup" id="popup">
          <a href="#works" class="popup__area"></a>
          <div class="popup__body">
@@ -170,7 +175,7 @@
 
    </div>
 
-
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
    <script src="js/script.js"></script>
 </body>
 
